kubernetes/apps/default/seafile/app/seafile-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.service.expose.storage-class-name: default
    kompose.service.healthcheck.readiness.interval: 10s
    kompose.service.healthcheck.readiness.tcp_port: "8082"
    kompose.service.healthcheck.readiness.timeout: 10s
    kompose.volume.size: 1Gi
    reloader.stakater.com/auto: "true"
  creationTimestamp: null
  labels:
    io.kompose.service: seafile-server
  name: seafile-server
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: seafile-server
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.service.expose.storage-class-name: default
        kompose.service.healthcheck.readiness.interval: 10s
        kompose.service.healthcheck.readiness.tcp_port: "8082"
        kompose.service.healthcheck.readiness.timeout: 10s
        kompose.volume.size: 1Gi
      creationTimestamp: null
      labels:
        io.kompose.network/compose-seafile-net: "true"
        io.kompose.service: seafile-server
    spec:
      containers:
        - env:
            DB_HOST: db
            DB_ROOT_PASSWD:
              valueFrom:
                  secretKeyRef:
                    name: &secret seafile-secret
                    key: DB_ROOT_PASSWD
            HTTPS: "true"
            SEAFILE_URL: files.${SECRET_DOMAIN}
            TIME_ZONE: ${TIMEZONE}
          image: ggogel/seafile-server:11.0.12
          name: seafile-server
          ports:
            - containerPort: 8001
              protocol: TCP
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8082
              protocol: TCP
            - containerPort: 8083
              protocol: TCP
          readinessProbe:
            periodSeconds: 10
            tcpSocket:
              port: 8082
            timeoutSeconds: 10
          resources: {}
          volumeMounts:
            - mountPath: /shared
              name: seafile-data
      restartPolicy: Always
      volumes:
        - name: seafile-data
          persistentVolumeClaim:
            claimName: seafile-data
status: {}
