kubernetes/apps/default/seafile/app/seahub-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    reloader.stakater.com/auto: "true"
  creationTimestamp: null
  labels:
    io.kompose.service: seahub
  name: seahub
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: seahub
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.network/compose-seafile-net: "true"
        io.kompose.service: seahub
    spec:
      containers:
          image: ggogel/seahub:11.0.12
          name: seahub
          ports:
            - containerPort: 8000
              protocol: TCP
          resources: {}
          volumeMounts:
            - mountPath: /shared
              name: seafile-data
            - mountPath: /shared/seafile/seahub-data/avatars
              name: seahub-avatars
            - mountPath: /shared/seafile/seahub-data/custom
              name: seahub-custom
      restartPolicy: Always
      volumes:
        - name: seafile-data
          persistentVolumeClaim:
            claimName: seafile-data-v2
        - name: seahub-avatars
          persistentVolumeClaim:
            claimName: seahub-avatars-v2
        - name: seahub-custom
          persistentVolumeClaim:
            claimName: seahub-custom-v2
status: {}
