kubernetes/apps/default/seafile/app/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.service.expose.storage-class-name: default
    kompose.service.healthcheck.readiness.interval: 10s
    kompose.service.healthcheck.readiness.retries: "3"
    kompose.service.healthcheck.readiness.test: healthcheck.sh --su-mysql --connect --innodb_initialized
    kompose.service.healthcheck.readiness.timeout: 10s
    kompose.volume.size: 1Gi
  creationTimestamp: null
  labels:
    io.kompose.service: seafile-db
  name: seafile-db
spec:
  ports:
    - name: "3306"
      port: 3306
      targetPort: 3306
  selector:
    io.kompose.service: seafile-db
status:
  loadBalancer: {}
