kubernetes/apps/default/seafile/app/seafile-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: seafile-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "36000"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "36000"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "36000"
    nginx.ingress.kubernetes.io/send-timeout: "36000"
    nginx.ingress.kubernetes.io/rewrite-target: "/$2"
    external-dns.alpha.kubernetes.io/target: internal.${SECRET_DOMAIN}
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Selfohsted
    gethomepage.dev/icon: sh-seafile.svg
    gethomepage.dev/name: Seafile
spec:
  ingressClassName: internal
  rules:
  - host: files.${SECRET_DOMAIN}
    http:
      paths:
      - path: /()(.*)
        pathType: Prefix
        backend:
          service:
            name: seahub
            port:
              number: 8000
      - path: /seafhttp(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: seafile-server
            port:
              number: 8082
      - path: /()(seafdav.*)
        pathType: Prefix
        backend:
          service:
            name: seafile-server
            port:
              number: 8080
      - path: /notification(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: seafile-server
            port:
              number: 8083
      - path: /()(media.*)
        pathType: Prefix
        backend:
          service:
            name: seahub-media
            port:
              number: 80
